Make a refactoring of contact logic

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -18,3 +18,12 @@
 .nav-footer a {
     color: yellowgreen;
 }
+
+
+.has-errors {
+  color: red;
+}
+
+.has-errors input, .has-errors textarea{
+  border: solid 1px red;
+}
